# sped-extractor

./: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
extract_sped/: README.rst  requirements.txt
extract_sped/scripts/: build_csv.py  get_mod_headers.py
l10n_br_spec_sped/: __manifest__.py
l10n_br_spec_sped/models/: __init__.py  ecd.py  ecf.py  efd_icms_ipi.py  efd_pis_cofins.py  spec_models.py
l10n_br_spec_sped/scripts/: build_csv.py  build_json.py  download.sh  extract_csv.py  extract_register_specs.py  generate.py  get_mod_headers.py  requirements.txt
l10n_br_spec_sped/security/: ir.model.access.csv
l10n_br_spec_sped/views/: ecd.xml  ecf.xml  efd_icms_ipi.xml  efd_pis_cofins.xml
scripts/: build_csv.py  build_json.py  build_python-sped_json.py  compare_python-sped.py  download.py  extract_csv.py  get_mod_headers.py
setup/_metapackage/: VERSION.txt  setup.py
specs/: download_url.csv
specs/2017/: download_info.csv
specs/2018/: download_info.csv
specs/2019/: download_info.csv
specs/ecd/: ecd_accurate_fields.csv  (+2 more)
sped_extractor/: README.rst
spedextractor/: __init__.py  __main__.py  build_csv.py  build_python-sped_json.py  build_pythonsped_json.py  compare_python-sped.py  compare_pythonsped.py  constants.py  download.py  extract_csv.py  extract_tables.py  gen_odoo.py  generate.py  get_mod_headers.py  get_table_headers.py  spedupdate.py  years.py
tests/: test_build_csv.py  test_constants.py  test_download.py  test_extract_tables.py
(+177 files in other folders)
