[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sped-extractor"
dynamic = ["version"]
description = "Extrai e interpreta os registros e os campos das tabelas dos manuais do SPED (Sistema Público de Escrituração Digital), para os módulos ECD, ECF, EFD Contribuições (PIS, COFINS) e EFD ICMS IPI."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {text = "MIT"} 

authors = [
    { name = "Raphaël Valyi", email = "raphael.valyi@akretion.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = ["sped", "ecd", "ecf", "efd", "piscofins", "icmsipi", "fiscal", "accounting", "odoo"]

dependencies = [
    "camelot-py",
    "unidecode",
    "click",
    "PyPDF2",
    "xsdata-odoo",
]

[project.urls]
Homepage = "https://github.com/akretion/sped-extractor"
Repository = "https://github.com/akretion/sped-extractor"
Bug-Tracker = "https://github.com/akretion/sped-extractor/issues"

# --- Setuptools specific configuration ---
[tool.setuptools]
include-package-data = true
packages = ["spedextractor"]

[tool.setuptools.dynamic]
version = {attr = "spedextractor.__version__"}

[tool.ruff]
line-length = 88
